--- a/src/app/admin/inventario/components/producto/producto.component.html
+++ b/src/app/admin/inventario/components/producto/producto.component.html
@@ -13,7 +13,7 @@
                     </div>
                 </ng-template>
                 <ng-template pTemplate="right">
-                    <!-- <p-dropdown [options]="categorias"  optionLabel="name" [showClear]="true" placeholder="Filtrar por categorias" /> -->
+                    <p-dropdown [options]="categorias"  optionLabel="name" [showClear]="true" placeholder="Filtrar por categorias" />
 
                     <button pButton pRipple label="Exportar" icon="pi pi-upload" class="p-button-help"(click)="dt.exportCSV()"></button>
                 </ng-template>
